# opencvTest

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Makefile  Makefile-bak  app  note.cpp
inc/: res.h  src.hpp
src/: main.cpp
